--- a/style.css
+++ b/style.css
@@ -1,182 +1,675 @@
-body {
-	font-family: 'Poppins', sans-serif;
-	background: linear-gradient(135deg, #ff7e5f 0%, #feb47b 100%);
-	/* Warm sunset colors */
-}
+.iphone-pro-x {
+    background-color: #ffffff;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+  }
+  
+  .iphone-pro-x .div {
+    background-color: #ffffff;
+    overflow: hidden;
+    width: 375px;
+    height: 812px;
+    position: relative;
+  }
+  
+  .iphone-pro-x .overlap {
+    position: absolute;
+    width: 375px;
+    height: 80px;
+    top: 0;
+    left: 0;
+  }
+  
+  .iphone-pro-x .ios-status-bar-black {
+    position: absolute;
+    width: 375px;
+    height: 44px;
+    top: 0;
+    left: 0;
+  }
+  
+  .iphone-pro-x .ios-status-bar-black-2 {
+    position: relative;
+    height: 44px;
+  }
+  
+  .iphone-pro-x .right-side {
+    position: absolute;
+    width: 67px;
+    height: 11px;
+    top: 17px;
+    left: 294px;
+  }
+  
+  .iphone-pro-x .battery {
+    position: absolute;
+    width: 24px;
+    height: 11px;
+    top: 0;
+    left: 42px;
+  }
+  
+  .iphone-pro-x .wifi {
+    position: absolute;
+    width: 15px;
+    height: 11px;
+    top: 0;
+    left: 22px;
+  }
+  
+  .iphone-pro-x .mobile-signal {
+    position: absolute;
+    width: 17px;
+    height: 11px;
+    top: 0;
+    left: 0;
+  }
+  
+  .iphone-pro-x .left-side {
+    position: absolute;
+    width: 28px;
+    height: 11px;
+    top: 17px;
+    left: 33px;
+  }
+  
+  .iphone-pro-x .rectangle {
+    position: absolute;
+    width: 375px;
+    height: 41px;
+    top: 39px;
+    left: 0;
+    background-color: #ffffff;
+    border-radius: 7px;
+    box-shadow: 0px 1px 2px #00000040;
+  }
+  
+  .iphone-pro-x .text-wrapper {
+    position: absolute;
+    height: 15px;
+    top: 47px;
+    left: 76px;
+    font-family: "Poppins", Helvetica;
+    font-weight: 700;
+    color: #d60665;
+    font-size: 10px;
+    letter-spacing: 0;
+    line-height: normal;
+  }
+  
+  .iphone-pro-x .text-wrapper-2 {
+    position: absolute;
+    height: 12px;
+    top: 58px;
+    left: 76px;
+    font-family: "Poppins", Helvetica;
+    font-weight: 500;
+    color: #000000;
+    font-size: 8px;
+    letter-spacing: 0;
+    line-height: normal;
+  }
+  
+  .iphone-pro-x .align-justify {
+    position: absolute;
+    width: 18px;
+    height: 16px;
+    top: 52px;
+    left: 30px;
+  }
+  
+  .iphone-pro-x .heart {
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    top: 53px;
+    left: 269px;
+  }
+  .heart {
+    margin-left: 27px;
+    margin-top: -2px;
+    padding-bottom: 5px;
+    filter: invert(17%) sepia(92%) saturate(7152%) hue-rotate(314deg) brightness(94%) contrast(104%);
+  }
+  
+  .iphone-pro-x .cart-arrow-down {
+    position: absolute;
+    width: 18px;
+    height: 16px;
+    top: 53px;
+    left: 327px;
+  }
+  
+  .iphone-pro-x .text-wrapper-3 {
+    position: absolute;
+    height: 21px;
+    top: 123px;
+    left: 39px;
+    font-family: "Poppins", Helvetica;
+    font-weight: 700;
+    color: #000000;
+    font-size: 14px;
+    letter-spacing: 0;
+    line-height: normal;
+  }
+  
+  .iphone-pro-x .text-wrapper-4 {
+    position: absolute;
+    height: 21px;
+    top: 608px;
+    left: 33px;
+    font-family: "Poppins", Helvetica;
+    font-weight: 600;
+    color: #000000;
+    font-size: 14px;
+    letter-spacing: 0;
+    line-height: normal;
+  }
+  
+  .iphone-pro-x .text-wrapper-5 {
+    position: absolute;
+    height: 17px;
+    top: 748px;
+    left: 31px;
+    font-family: "Poppins", Helvetica;
+    font-weight: 700;
+    color: #000000;
+    font-size: 11px;
+    letter-spacing: 0;
+    line-height: normal;
+  }
+  
+  .iphone-pro-x .text-wrapper-6 {
+    position: absolute;
+    width: 97px;
+    height: 17px;
+    top: 745px;
+    left: 243px;
+    font-family: "Poppins", Helvetica;
+    font-weight: 700;
+    color: #000000;
+    font-size: 11px;
+    letter-spacing: 0;
+    line-height: normal;
+  }
+  
+  .iphone-pro-x .text-wrapper-7 {
+    position: absolute;
+    height: 12px;
+    top: 780px;
+    left: 31px;
+    font-family: "Poppins", Helvetica;
+    font-weight: 700;
+    color: #000000;
+    font-size: 8px;
+    letter-spacing: 0;
+    line-height: normal;
+  }
+  
+  .iphone-pro-x .text-wrapper-8 {
+    position: absolute;
+    width: 79px;
+    height: 12px;
+    top: 777px;
+    left: 243px;
+    font-family: "Poppins", Helvetica;
+    font-weight: 700;
+    color: #000000;
+    font-size: 8px;
+    letter-spacing: 0;
+    line-height: normal;
+  }
+  
+  .iphone-pro-x .text-wrapper-9 {
+    position: absolute;
+    height: 15px;
+    top: 765px;
+    left: 31px;
+    font-family: "Poppins", Helvetica;
+    font-weight: 300;
+    color: #000000b2;
+    font-size: 10px;
+    letter-spacing: 0;
+    line-height: normal;
+  }
+  
+  .iphone-pro-x .text-wrapper-10 {
+    position: absolute;
+    width: 156px;
+    height: 15px;
+    top: 762px;
+    left: 243px;
+    font-family: "Poppins", Helvetica;
+    font-weight: 300;
+    color: #000000b2;
+    font-size: 10px;
+    letter-spacing: 0;
+    line-height: normal;
+  }
+  
+  .iphone-pro-x .what-s-for-dinner {
+    position: absolute;
+    height: 30px;
+    top: 148px;
+    left: 39px;
+    font-family: "Poppins", Helvetica;
+    font-weight: 400;
+    color: #000000;
+    font-size: 10px;
+    letter-spacing: 0;
+    line-height: normal;
+  }
+  
+  .iphone-pro-x .overlap-group {
+    position: absolute;
+    width: 315px;
+    height: 30px;
+    top: 204px;
+    left: 30px;
+    background-color: #ffffff;
+    border-radius: 5px;
+    box-shadow: 1px 1px 1px #00000040;
+  }
+  
+  .iphone-pro-x .search {
+    position: absolute;
+    width: 18px;
+    height: 16px;
+    top: 7px;
+    left: 14px;
+  }
+  
+  .iphone-pro-x .search-for-shops {
+    position: absolute;
+    height: 15px;
+    top: 7px;
+    left: 53px;
+    font-family: "Poppins", Helvetica;
+    font-weight: 400;
+    color: #00000080;
+    font-size: 10px;
+    letter-spacing: 0;
+    line-height: normal;
+  }
+  
+  .iphone-pro-x .overlap-2 {
+    position: absolute;
+    width: 334px;
+    height: 141px;
+    top: 238px;
+    left: 31px;
+  }
+  
+  .iphone-pro-x .rectangle-2 {
+    position: absolute;
+    width: 315px;
+    height: 135px;
+    top: 6px;
+    left: 0;
+    background-color: #d60665;
+    border-radius: 5px;
+  }
+  
+  .iphone-pro-x .text-wrapper-11 {
+    position: absolute;
+    height: 21px;
+    top: 82px;
+    left: 17px;
+    font-family: "Poppins", Helvetica;
+    font-weight: 600;
+    color: #ffffff;
+    font-size: 14px;
+    letter-spacing: 0;
+    line-height: normal;
+  }
+  
+  .iphone-pro-x .text-wrapper-12 {
+    position: absolute;
+    height: 17px;
+    top: 104px;
+    left: 18px;
+    font-family: "Poppins", Helvetica;
+    font-weight: 400;
+    color: #ffffff;
+    font-size: 11px;
+    letter-spacing: 0;
+    line-height: normal;
+  }
+  
+  .iphone-pro-x .atikah-akhtar {
+    position: absolute;
+    width: 140px;
+    height: 122px;
+    top: 0;
+    left: 194px;
+    object-fit: cover;
+  }
+  
+  .iphone-pro-x .tim-toomey {
+    position: absolute;
+    width: 110px;
+    height: 73px;
+    top: 87px;
+    left: 261px;
+    object-fit: cover;
+  }
+  
+  .iphone-pro-x .overlap-3 {
+    position: absolute;
+    width: 147px;
+    height: 199px;
+    top: 389px;
+    left: 31px;
+    background-color: #fcd077;
+    border-radius: 5px;
+  }
+  
+  .iphone-pro-x .text-wrapper-13 {
+    position: absolute;
+    height: 21px;
+    top: 123px;
+    left: 8px;
+    font-family: "Poppins", Helvetica;
+    font-weight: 600;
+    color: #000000;
+    font-size: 14px;
+    letter-spacing: 0;
+    line-height: normal;
+  }
+  
+  .iphone-pro-x .everyday-up-to {
+    position: absolute;
+    height: 30px;
+    top: 144px;
+    left: 8px;
+    font-family: "Poppins", Helvetica;
+    font-weight: 400;
+    color: #000000;
+    font-size: 10px;
+    letter-spacing: 0;
+    line-height: normal;
+  }
+  
+  .iphone-pro-x .PNG-image-removebg {
+    position: absolute;
+    width: 110px;
+    height: 73px;
+    top: 22px;
+    left: 19px;
+    object-fit: cover;
+  }
+  
+  .iphone-pro-x .overlap-4 {
+    position: absolute;
+    width: 148px;
+    height: 119px;
+    top: 390px;
+    left: 197px;
+    background-color: #eb9fbe;
+    border-radius: 5px;
+  }
+  
+  .iphone-pro-x .overlap-5 {
+    position: absolute;
+    width: 74px;
+    height: 48px;
+    top: 57px;
+    left: 14px;
+  }
+  
+  .iphone-pro-x .text-wrapper-14 {
+    position: absolute;
+    height: 21px;
+    top: 0;
+    left: 0;
+    font-family: "Poppins", Helvetica;
+    font-weight: 600;
+    color: #000000;
+    font-size: 14px;
+    letter-spacing: 0;
+    line-height: normal;
+  }
+  
+  .iphone-pro-x .p {
+    position: absolute;
+    height: 30px;
+    top: 18px;
+    left: 0;
+    font-family: "Poppins", Helvetica;
+    font-weight: 400;
+    color: #000000;
+    font-size: 10px;
+    letter-spacing: 0;
+    line-height: normal;
+  }
+  
+  .iphone-pro-x .mel-chipfakacha-slj {
+    position: absolute;
+    width: 60px;
+    height: 54px;
+    top: 0;
+    left: 88px;
+    object-fit: cover;
+  }
+  
+  .iphone-pro-x .overlap-6 {
+    position: absolute;
+    width: 149px;
+    height: 64px;
+    top: 524px;
+    left: 197px;
+  }
+  
+  .iphone-pro-x .rectangle-3 {
+    position: absolute;
+    width: 149px;
+    height: 60px;
+    top: 4px;
+    left: 0;
+    background-color: #85c0fc;
+    border-radius: 5px;
+  }
+  
+  .iphone-pro-x .text-wrapper-15 {
+    position: absolute;
+    height: 21px;
+    top: 28px;
+    left: 11px;
+    font-family: "Poppins", Helvetica;
+    font-weight: 600;
+    color: #000000;
+    font-size: 14px;
+    letter-spacing: 0;
+    line-height: normal;
+  }
+  
+  .iphone-pro-x .grocery-more {
+    position: absolute;
+    height: 15px;
+    top: 43px;
+    left: 11px;
+    font-family: "Poppins", Helvetica;
+    font-weight: 400;
+    color: #000000;
+    font-size: 10px;
+    letter-spacing: 0;
+    line-height: normal;
+  }
+  
+  .iphone-pro-x .maria-lin-kim {
+    position: absolute;
+    width: 50px;
+    height: 44px;
+    top: 0;
+    left: 98px;
+    object-fit: cover;
+  }
+  
+  .iphone-pro-x .overlap-group-2 {
+    position: absolute;
+    width: 203px;
+    height: 100px;
+    top: 640px;
+    left: 30px;
+  }
+  
+  .iphone-pro-x .img {
+    position: absolute;
+    width: 203px;
+    height: 100px;
+    top: 0;
+    left: 0;
+  }
+  
+  .iphone-pro-x .rectangle-4 {
+    position: absolute;
+    width: 40px;
+    height: 22px;
+    top: 72px;
+    left: 9px;
+    background-color: #ffffff;
+    border-radius: 25px;
+  }
+  
+  .iphone-pro-x .text-wrapper-16 {
+    position: absolute;
+    height: 12px;
+    top: 76px;
+    left: 15px;
+    font-family: "Poppins", Helvetica;
+    font-weight: 500;
+    color: #000000;
+    font-size: 8px;
+    letter-spacing: 0;
+    line-height: normal;
+  }
+  
+  .iphone-pro-x .rectangle-5 {
+    position: absolute;
+    width: 68px;
+    height: 18px;
+    top: 5px;
+    left: 0;
+    background-color: #d60665;
+    border-radius: 0px 5px 5px 0px;
+  }
+  
+  .iphone-pro-x .text-wrapper-17 {
+    position: absolute;
+    height: 12px;
+    top: 7px;
+    left: 1px;
+    font-family: "Poppins", Helvetica;
+    font-weight: 500;
+    color: #ffffff;
+    font-size: 8px;
+    letter-spacing: 0;
+    line-height: normal;
+  }
+  
+  .iphone-pro-x .overlap-7 {
+    position: absolute;
+    width: 104px;
+    height: 99px;
+    top: 641px;
+    left: 240px;
+    background-image: url(https://c.animaapp.com/oj3GBcma/img/rectangle-7-1.svg);
+    background-size: 100% 100%;
+  }
+  
+  .iphone-pro-x .div-wrapper {
+    position: absolute;
+    width: 40px;
+    height: 22px;
+    top: 71px;
+    left: 8px;
+    background-color: #ffffff;
+    border-radius: 25px;
+  }
+  
+  .iphone-pro-x .text-wrapper-18 {
+    position: absolute;
+    height: 12px;
+    top: 4px;
+    left: 6px;
+    font-family: "Poppins", Helvetica;
+    font-weight: 500;
+    color: #000000;
+    font-size: 8px;
+    letter-spacing: 0;
+    line-height: normal;
+  }
+  
+  .iphone-pro-x .overlap-8 {
+    position: absolute;
+    width: 68px;
+    height: 18px;
+    top: 4px;
+    left: 0;
+    background-color: #d60665;
+    border-radius: 0px 5px 5px 0px;
+  }
+  
+  .iphone-pro-x .text-wrapper-19 {
+    position: absolute;
+    height: 12px;
+    top: 2px;
+    left: 1px;
+    font-family: "Poppins", Helvetica;
+    font-weight: 500;
+    color: #ffffff;
+    font-size: 8px;
+    letter-spacing: 0;
+    line-height: normal;
+  }
+  
 
+  #map {
+    height: 500px;
+    width: 100%;
+  }
 
-.container {
-	backdrop-filter: blur(10px);
-	background-color: rgba(255, 255, 255, 0.8);
-}
+  /* Custom InfoWindow styles */
+  .info-window {
+    font-family: Arial, sans-serif;
+    font-size: 14px;
+    padding: 10px;
+  }
 
-/* Fade-in animation */
-.fade-in {
-	opacity: 0;
-	animation: fadeIn 1s ease-in-out forwards;
-}
+  .info-window strong {
+    font-size: 16px;
+    color: #333;
+  }
 
-@keyframes fadeIn {
-	0% {
-		opacity: 0;
-		transform: translateY(10px);
-	}
+  .info-window p {
+    margin: 5px 0;
+  }
 
-	100% {
-		opacity: 1;
-		transform: translateY(0);
-	}
-}
+  .info-window a {
+    text-decoration: none;
+    color: #1e90ff;
+  }
 
-/* Pop-in animation */
-.pop-in {
-	animation: popIn 0.5s cubic-bezier(0.26, 0.53, 0.74, 1.48);
-}
+  .info-window a:hover {
+    text-decoration: underline;
+  }
 
-@keyframes popIn {
-	0% {
-		transform: scale(0.8);
-		opacity: 0;
-	}
+  .info-window img {
+    margin-top: 10px;
+    width: 100%;
+    height: auto;
+    max-width: 200px;
+    border-radius: 4px;
+  }
 
-	100% {
-		transform: scale(1);
-		opacity: 1;
-	}
-}
+  .info-window .rating {
+    margin-top: 8px;
+    font-weight: bold;
+    color: #ff8c00;
+  }
 
-/* Flow-up animation for food cards */
-.flow-up {
-	animation: flowUp 0.5s ease-out forwards;
-}
-
-@keyframes flowUp {
-	from {
-		transform: translateY(20px);
-		opacity: 0;
-	}
-
-	to {
-		transform: translateY(0);
-		opacity: 1;
-	}
-}
-
-/* Highlight the CO2 saved information */
-.highlight-co2 {
-	color: #34D399;
-	/* Tailwind green-400 */
-	font-weight: bold;
-	font-size: 1.5em;
-	display: inline-block;
-	animation: co2Pop 1s ease-in-out forwards;
-}
-
-/* Animation for emphasizing the CO2 saved */
-@keyframes co2Pop {
-	0% {
-		transform: scale(0.8);
-		opacity: 0;
-	}
-
-	50% {
-		transform: scale(1.1);
-		opacity: 0.8;
-	}
-
-	100% {
-		transform: scale(1);
-		opacity: 1;
-	}
-}
-
-/* Sparkle effect for decoration */
-.sparkle {
-	position: absolute;
-	width: 5px;
-	height: 5px;
-	border-radius: 50%;
-	background-color: white;
-	opacity: 0;
-}
-
-.sparkle-container {
-	position: relative;
-	overflow: hidden;
-}
-
-/* Food cards with hover effect */
-.food-list {
-	max-height: 400px;
-	overflow-y: auto;
-}
-
-.food-card {
-	transition: all 0.3s ease;
-}
-
-.food-card:hover {
-	transform: translateY(-5px);
-	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
-}
-
-/* First food card styling */
-.first-item {
-	background-color: #eef2ff;
-	border: 2px solid #4f46e5;
-}
-
-/* Typing effect and cursor */
-.typing {
-	border-right: 2px solid black;
-	animation: blink 0.7s steps(1) infinite;
-}
-
-@keyframes blink {
-	from {
-		border-color: black;
-	}
-
-	to {
-		border-color: transparent;
-	}
-}
-
-/* Highlight numbers for calories burned */
-.highlight-number {
-	color: #4f46e5;
-	/* Indigo */
-	font-weight: bold;
-	font-size: 1.2em;
-}
-
-/* Animated text appearance */
-.animated-text {
-	animation: scaleUp 0.5s ease forwards;
-}
-
-@keyframes scaleUp {
-	0% {
-		transform: scale(0.9);
-		opacity: 0;
-	}
-
-	100% {
-		transform: scale(1);
-		opacity: 1;
-	}
-}
-
-/* Visual emphasis for calorie count and numbers */
-.text-3xl {
-	font-size: 2rem;
-	font-weight: bold;
-}
-
-/* Overall styling for the card presentation */
-.card-container {
-	margin-bottom: 1.5rem;
-	padding: 1rem;
-	background-color: #f8fafc;
-	border-radius: 0.5rem;
-}
+  #routeForm {
+    margin-top: 100px;
+  }
